--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ section{
 }
 @media (max-width:580px) {
     .bg{
-        width: 100vw;
+        width: 100%;
     }
     nav{
         width: 100%;
