--- a/style.css
+++ b/style.css
@@ -151,6 +151,10 @@ section{
         width: 80%;
         margin-left: 40px;
     }
+    .info{
+        font-size: small;
+        flex-shrink: 1;
+    }
 }
 /* Import Font Awesome for icons */
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
